--- a/example/storybook/src/components/HStack/index.stories.mdx
+++ b/example/storybook/src/components/HStack/index.stories.mdx
@@ -122,13 +122,13 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>number / string / undefined</Table.TText>
+          <Table.TText>{`number | string | undefined`}</Table.TText>
         </Table.TD>
         <Table.TD>
           <Table.TText>-</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>It sets the space between children</Table.TText>
+          <Table.TText>{`It sets the space between children.`}</Table.TText>
         </Table.TD>
       </Table.TR>
     </Table.TBody>
