--- a/example/storybook/src/components/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Tooltip/index.stories.mdx
@@ -17,6 +17,7 @@ import {
   CodePreview,
   Table,
   Text,
+  InlineCode,
 } from '@gluestack/design-system';
 
 import { styled } from '@dank-style/react';
@@ -136,129 +137,130 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     <Table.THead>
       <Table.TR>
         <Table.TH>
-          <Text>Prop</Text>
+          <Table.TText>Prop</Table.TText>
         </Table.TH>
         <Table.TH>
-          <Text>Type</Text>
+          <Table.TText>Type</Table.TText>
         </Table.TH>
         <Table.TH>
-          <Text>Default</Text>
+          <Table.TText>Default</Table.TText>
         </Table.TH>
         <Table.TH>
-          <Text>Description</Text>
+          <Table.TText>Description</Table.TText>
         </Table.TH>
       </Table.TR>
     </Table.THead>
     <Table.TBody>
       <Table.TR>
         <Table.TD>
-          <Text>trigger</Text>
+          <Table.TText>
+            <InlineCode>trigger</InlineCode>
+          </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>{'(_props: any, state: { open: boolean; }) => Element'}</Text>
+          <Table.TText>{`{'(_props: any, state: { open: boolean; }) => Element'}`}</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text></Text>
+          <Table.TText>-</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>
-            Function that returns a React Element. This element will be used as
-            a Trigger for the menu.
-          </Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>placement</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>
-            {
-              '"bottom" | "top" | "right" | "left" | "top left" | "top right" | "bottom left" | "bottom right" | "right top" | "right bottom" | "left top" | "left bottom"'
-            }
-          </Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bottom left</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>menu placement</Text>
+          <Table.TText>{`Function that returns a React Element. This element will be used as a Trigger for the menu.`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>defaultIsOpen</Text>
+          <Table.TText>
+            <InlineCode>placement</InlineCode>
+          </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>boolean</Text>
+          <Table.TText>{`"bottom" | "top" | "right" | "left" | "top left" | "top right" | "bottom left" | "bottom right" | "right top" | "right bottom" | "left top" | "left bottom"`}</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>false</Text>
+          <Table.TText>bottom left</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>If true, the menu will be opened by default.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>closeOnOverlayClick</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>true</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>closes menu when clicked outside</Text>
+          <Table.TText>menu placement</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>onOpen</Text>
+          <Table.TText>
+            <InlineCode>defaultIsOpen</InlineCode>
+          </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>{'() => void'}</Text>
+          <Table.TText>boolean</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>true</Text>
+          <Table.TText>false</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>This function will be invoked when the menu is opened.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>onClose</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>{' () => void'}</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text></Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>
-            This function will be invoked when menu is closed. It will also be
-            called when the user attempts to close the menu via Escape key or
-            backdrop press.
-          </Text>
+          <Table.TText>{`If true, the menu will be opened by default.`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isOpen</Text>
+          <Table.TText>
+            <InlineCode>closeOnOverlayClick</InlineCode>
+          </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>boolean</Text>
+          <Table.TText>bool</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>false</Text>
+          <Table.TText>true</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>
-            Whether the menu is opened. Useful for controlling the open state.
-          </Text>
+          <Table.TText>{`closes menu when clicked outside.`}</Table.TText>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Table.TText>
+            <InlineCode>onOpen</InlineCode>
+          </Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>{'() => void'}</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>true</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>{`This function will be invoked when the menu is opened.`}</Table.TText>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Table.TText>
+            <InlineCode>onClose</InlineCode>
+          </Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>{'() => void'}</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>-</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>{`This function will be invoked when menu is closed. It will also be called when the user attempts to close the menu via Escape key or backdrop press.`}</Table.TText>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Table.TText>
+            <InlineCode>isOpen</InlineCode>
+          </Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>boolean</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>false</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>{`Whether the menu is opened. Useful for controlling the open state.`}</Table.TText>
         </Table.TD>
       </Table.TR>
     </Table.TBody>
