fix: table fixes

--- a/example/storybook/src/components/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Actionsheet/index.stories.mdx
@@ -277,10 +277,10 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>`'slide'` &#124; `'fade'`</Table.TText>
+          <Table.TText>{`'slide' | 'fade'`}</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>`'slide'`</Table.TText>
+          <Table.TText>{`'slide'`}</Table.TText>
         </Table.TD>
         <Table.TD>
           <Table.TText>{`Specifies the animation preset for the ActionSheet.`}</Table.TText>
