--- a/example/storybook/src/components/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Modal/index.stories.mdx
@@ -338,10 +338,10 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
           </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>`'slide'` &#124; `'fade'`</Table.TText>
+          <Table.TText>{`'slide' | 'fade'`}</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>`'slide'`</Table.TText>
+          <Table.TText>{`'slide'`}</Table.TText>
         </Table.TD>
         <Table.TD>
           <Table.TText>{`Specifies the animation preset for the Modal.`}</Table.TText>
