--- a/example/storybook/src/components/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Toast/index.stories.mdx
@@ -170,7 +170,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>`()=>{}`</Table.TText>
+          <Table.TText>{`()=>{}`}</Table.TText>
         </Table.TD>
         <Table.TD>
           <Table.TText>-</Table.TText>
