--- a/example/storybook/src/components/Image/index.stories.mdx
+++ b/example/storybook/src/components/Image/index.stories.mdx
@@ -133,11 +133,13 @@ It inherits all the properties of React Native's [Image](https://reactnative.dev
 
 For customizing the Image, you have to map styled Image to Image. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
+###
+
 ### Usage
 
 ```jsx
 // import the styles
-import { Root } from '../ui-components/Image/styled-components';
+import { Root } from '../components/Image/styled-components';
 
 // mapping the Image to root component
 const Image = Root;
@@ -146,4 +148,4 @@ const Image = Root;
 export default () => <Image />;
 ```
 
-Default styling of the component can be found in the `ui-components/Image` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Image/index.tsx) of the styled `Image` component.
+Default styling of the component can be found in the `components/Image` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Image/index.tsx) of the styled `Image` component.
