--- a/example/storybook/src/overview/Performance/index.stories.mdx
+++ b/example/storybook/src/overview/Performance/index.stories.mdx
@@ -19,7 +19,9 @@ We tested the performance of our landing page, built with `dank` and a large num
   alt="Perfromance matrics from lighthouse report"
 />
 
-We suggest a way to test the performance is to build real examples, create complex pages and native screens with a large number of elements, and test with Lighthouse and PageSpeed Insights. E.g. we are getting a 99 or 100 score on our docs website built with Dank.
+We have run the benchmark, and we are getting great results compared to other libraries. We don't want the comparison with other libraries to be the ultimate scoring system. It doesn't give the full picture of any library. There are other important metrics too. Also, we may go wrong in how we run the benchmark, we may end up with selection bias too (unintentionally).
+
+We suggest a way to test the performance is to build real examples, create complex pages and native screens with a large number of elements, and test with Lighthouse and PageSpeed Insights. E.g. we are getting a 99 or 100 score on our docs website built with dank.
 
 Dank also supports Server-Side Rendering (SSR) through the flush function, which allows styles to be rendered on the server and hydrated on the client, eliminating the FOUC (Flash of Unstyled Content) issue and improving the overall user experience.
 
